ircv3_parse_derive/tests/ui/de/fail/nested_missing_attribute.rs
use ircv3_parse_derive::{FromMessage, ToMessage};

#[derive(FromMessage)]
struct MsgId(#[irc(tag = "msgid")] String);

#[derive(FromMessage, ToMessage)]
struct BothDerives {
    #[irc(source)]
    nick: String,
    msg_id: MsgId,
}

fn main() {}
