ircv3_parse_derive/tests/ui/de/fail/nested_missing_attribute.stderr
error: field `msg_id` requires an #[irc(...)] attribute for ToMessage serialization
  --> tests/ui/de/fail/nested_missing_attribute.rs:10:5
   |
10 |     msg_id: MsgId,
   |     ^^^^^^^^^^^^^
